--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 html, body {
-    background: #1c1d26;
+    background-image: url('./images/image2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 100%;
+    
 }
 
 header {
 height: 7vh;
 text-align: center;
-margin-top: 5px;
+margin-top: 15px;
 }
 
 .image1 {
@@ -16,6 +22,16 @@ margin-top: 5px;
     height: 600px;
     width: 100%;
 }
+
+.image2 {
+    background-image: url('./images/image2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 7vh;
+    width: 100%;
+}
+
 
 .Gridheader {
     display: grid;
