--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ text-align: center;
 margin-top: 15px;
 }
 
+#orcid {
+    text-align: center;
+    padding-right: 12px;
+}
+
 .image1 {
     background-image: url('./images/image2.jpg');
     background-size: cover;
